<resources>
    <string name="app_name">dagger2</string>

    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile_title">This is your profile</string>
    <string name="name">Name</string>
    <string name="age">age</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="next_activity">Next activity</string>
    <string name="back_profile">Back to profile</string>
    <string name="request">Do web request</string>
</resources>
